  user and password as in 2.5.4; wxURI::GetPassword() added.
- Added wxDebugReport class.
- Added wxTempFileOutputStream by Stas Sergeev.
- Fixed wxDateTime::SetToWeekDayInSameWeek(Sun, Monday_First).
- Added WXK_SPECIAL keycodes for special hardware buttons.
- Fixed bug with wxFile::Seek(-1, wxFromCurrent).
- Added wxString/C array constructors to wxArrayString.

All (GUI):

- Added GetIcon, GetBitmap to wxImageList. wxGenericImageList's original
  GetBitmap is renamed GetBitmapPtr.
- Added XPM data constructor to wxImage.
- Added style parameter to wxBufferedDC to allow buffering just the client, or
  the whole virtual area.
- Restored ability to set a custom splitter sash size with SetSashSize.
- Fixed wxScrolledWindow sizer behaviour so that the virtual size
  isn't used to set the window size.
- Added wxTE_BESTWRAP (based on patch by Mart Raudsepp).
- wxEVT_COMMAND_SPLITTER_SASH_POS_CHANGED is now only sent once at the end of
  splitter dragging and not after each CHANGING event (Jacobo Vilella Vilahur).
- Added wxImage::IsTransparent()

Unix:

- Fixed build on Linux/AMD64.

wxMSW:

- Added "orient" parameter to wxMDIParentFrame::Tile().
- wxTextCtrl with wxTE_RICH2 style now uses RichEdit 4.1 if available.
- fix handling Alt-key events in wxComboBox (reported by Joakim Roubert).
- wxWindow::Refresh() refreshes the window children as well.
- Improved static box and radio box refresh and background colour
  handling (Jamie Gadd).

wxGTK:

- Improved wxSystemSettings::GetMetric() to work better with X11 (Mart Raudsepp).
- Corrected wxListBox selection handling.
- Corrected default button size handling for different themes.
- Corrected splitter sash size and look for different themes.
- Fixed keyboard input for dead-keys.
- Added support for more wrapping styles (Mart Raudsepp).
- GTK2.4+ wxFileDialog reimplemented to support non-modal usage better,
  and fix all known bugs (Mart Raudsepp).

wxMac:
