@@ -28,11 +28,23 @@ Initializes a new read-only memory stream which will use the specified buffer
 {\it data} of length {\it len}. The stream does not take ownership of the 
 buffer, i.e. that it will not delete in its destructor.
 
+\func{}{wxMemoryInputStream}{\param{const wxMemoryOutputStream&}{ stream}}
+
+Creates a new read-only memory stream, initilalizing it with the
+data from the given output stream \arg{stream}.
+
 \membersection{wxMemoryInputStream::\destruct{wxMemoryInputStream}}\label{wxmemoryinputstreamdtor}
 
 \func{}{\destruct{wxMemoryInputStream}}{\void}
 
 Destructor.
+
+\membersection{wxMemoryInputStream::GetInputStreamBuffer}\label{wxmemoryinputstreamgetistrmbuf}
+
+\constfunc{wxStreamBuffer *}{GetInputStreamBuffer}{\void}
+
+Returns the pointer to the stream object used as an internal buffer
+for that stream.
 
 % -----------------------------------------------------------------------------
 % wxMemoryOutputStream
@@ -87,3 +99,9 @@ the buffer.
 CopyTo returns the number of bytes copied to the buffer. Generally it is either
 len or the size of the stream buffer.
 
+\membersection{wxMemoryOutputStream::GetOutputStreamBuffer}\label{wxmemoryoutputstreamgetostrmbuf}
+
+\constfunc{wxStreamBuffer *}{GetOutputStreamBuffer}{\void}
+
+Returns the pointer to the stream object used as an internal buffer
+for that stream.
